Bug 454578.  Load the quirk stylesheet separately from the general UA stylesheet, so it can be sensibly enabled/disabled in style sets.  r+sr=dbaron